--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
     <main>Main content</main>
 
     <!--Footer-->
-    <footer>Footer</footer>
+    <footer>
+        <ul>
+            <li><a href="https://facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </footer>
+
+    <!-- Font Awesome kit -->
+    <script src="https://kit.fontawesome.com/f45dddf36e.js" crossorigin="anonymous"></script>
 </body>
 </html>
