--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <!--Footer-->
     <footer>
-      <ul>
+      <ul id="social-networks">
         <li>
           <a
             href="https://facebook.com/"
