--- a/signup.html
+++ b/signup.html
@@ -43,7 +43,36 @@
     </header>
 
     <!--Main content -->
-    <main>Main content</main>
+    <main>
+        <section id="signup">
+            <form action="https://formdump.codeinstitute.net" method="post" id="signup-form">
+                <h2><i class="fa-solid fa-heart-pulse"></i> Let's get you signed up!</h2>
+                <div class="text-input">
+                    <label for="first_name">First Name</label>
+                    <input type="text" id="first_name" name="first_name" required>
+                    <br>
+                    <label for="last_name">Last Name</label>
+                    <input type="text" id="last_name" name="last_name" required>
+                    <br>
+                    <label for="email_address">Email Address</label>
+                    <input type="email" id="email_address" name="email_address" required>
+                    <br>
+                </div>
+                <div class="radio_buttons">
+                    <label for="road">Road</label>
+                    <input type="radio" id="road" name="running_preference" required>
+                    <br>
+                    <label for="trail">Trail</label>
+                    <input type="radio" id="trail" name="running_preference">
+                    <br>
+                    <label for="both">Both</label>
+                    <input type="radio" id="both" name="running_preference">
+                    <br>
+                </div>
+                <input type="submit" class="join-button" value="Let's Run!">
+            </form>
+        </section>
+    </main>
 
     <!--Footer-->
     <footer>
