--- a/signup.html
+++ b/signup.html
@@ -56,7 +56,7 @@
                     <label for="email_address">Email Address</label>
                     <input type="email" id="email_address" class="text-input" name="email_address" required>
                     <br>
-                <div class="radio_buttons">
+                <div class="radio-buttons">
                     <div>
                         <label for="road">Road</label>
                         <input type="radio" id="road" name="running_preference" required>
