--- a/signup.html
+++ b/signup.html
@@ -59,15 +59,15 @@
                 <div class="radio-buttons">
                     <div>
                         <label for="road">Road</label>
-                        <input type="radio" id="road" name="running_preference" required>
+                        <input type="radio" id="road" value="road" name="running_preference" required checked>
                     </div>
                     <div>
                         <label for="trail">Trail</label>
-                        <input type="radio" id="trail" name="running_preference">
+                        <input type="radio" id="trail" value="trail" name="running_preference" required>
                     </div>
                     <div>
                         <label for="both">Both</label>
-                        <input type="radio" id="both" name="running_preference">
+                        <input type="radio" id="both" value="both" name="running_preference">
                     </div>
                 </div>
                 <button type="submit" class="join-button">Let's Run!</button>
